# did-finance-eu

./: CLAUDE.md  IRLTLT01CZM156N.csv  IRLTLT01HUM156N.csv  IRLTLT01PLM156N.csv  Makefile  README.md  pyproject.toml  requirements.txt  setup_codex.sh
data/: get_daily_market_data.py
did_finance_eu/: __init__.py  dataset.py  features.py  plots.py
did_finance_eu/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-did_bonds.ipynb  2.0-synthetic_control.ipynb  3.0-dynamic_did.ipynb  4.0-spillovers_local_proj.ipynb  analysis.ipynb
