[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "did_finance_eu"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Felix Giessmann" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "statsmodels",
    "tqdm",
    "typer",
]
requires-python = ">=3.11"


[tool.ruff]
line-length = 99
src = ["did_finance_eu"]
include = ["pyproject.toml", "did_finance_eu/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["did_finance_eu"]
force-sort-within-sections = true

